# Sophia-Decision-Engine

./: README.md  mainpage.md
html/: action_8h__dep__incl.dot  action_8h_source.html  action__base_8h.html  action__base_8h__dep__incl.dot  action__base_8h__incl.dot  action__base_8h_source.html  actor_8cpp.html  actor_8cpp__incl.dot  actor_8h.html  actor_8h.js  actor_8h__dep__incl.dot  actor_8h__incl.dot  actor_8h_source.html  alignment_8h__dep__incl.dot  annotated.html  annotated_dup.js  board_8cpp.html  board_8cpp__incl.dot  board_8h.html  board_8h.js  board_8h__dep__incl.dot  board_8h__incl.dot  board_8h_source.html  board__tests_8cpp.html  board__tests_8cpp.js  board__tests_8cpp__incl.dot  bot_8cpp.html  bot_8cpp__incl.dot  bot_8h.html  bot_8h__dep__incl.dot  bot_8h__incl.dot  bot_8h_source.html  classes.html  classsophia_1_1logging_1_1ConsoleLogger-members.html  classsophia_1_1logging_1_1ConsoleLogger.html  classsophia_1_1logging_1_1ConsoleLogger.js  classsophia_1_1logging_1_1ConsoleLogger__coll__graph.dot  classsophia_1_1logging_1_1ConsoleLogger__inherit__graph.dot  classsophia_1_1logging_1_1ConsoleLogger_a8fecfcc1e80daafc2a9bfbbf7cf37d66_cgraph.dot  (+521 more)
src/board_games/: CMakeLists.txt
src/board_games/models/: coordinate.cpp
src/board_games/observer/: subject.cpp
src/monte_carlo/: CMakeLists.txt  tree_search_algorithm.cpp
src/monte_carlo/factories/: CMakeLists.txt  generic_tree_factory.tpp  tree_factory_base.tpp
src/monte_carlo/models/: CMakeLists.txt  action.cpp  action_base.tpp  actor.cpp  node.cpp  node_base.tpp  random_action_strategy.cpp  simulation_result.cpp
src/monte_carlo/output/: CMakeLists.txt  print_dashboard.cpp
src/simulation/: CMakeLists.txt
src/simulation/interfaces/: CMakeLists.txt  simulation_action.cpp  simulation_actor.cpp  simulation_result.cpp  simulation_state.cpp
src/simulation/models/: CMakeLists.txt  simulation_runner.cpp
tests/monte_carlo/: CMakeLists.txt
tests/monte_carlo/mocks/include/: mock_action.h  mock_node.h  mock_rollout_strategy.h  mock_tree_factory.h
tests/monte_carlo/mocks/src/: mock_action.cpp  mock_node.cpp  mock_tree_factory.cpp
tests/monte_carlo/model_tests/action_tests/: action_source_tests.cpp  action_target_tests.cpp  action_upper_confidence_bound_tests.cpp  monte_carlo_action_fixture.h
tests/monte_carlo/model_tests/node_tests/: backpropagate_tests.cpp  expand_tests.cpp  has_been_sampled_tests.cpp  is_leaf_node_tests.cpp  monte_carlo_nodes_fixture.h  name_tests.cpp  rollout_tests.cpp  select_best_action_tests.cpp  set_parent_tests.cpp  total_reward_tests.cpp  upper_confidence_bound_tests.cpp  value_tests.cpp  visit_count_tests.cpp
tests/monte_carlo/tree_search_algorithm_tests/: tree_search_algorithm_tests.cpp
(+559 files in other folders)
